--- a/exercicios/ex005/style.css
+++ b/exercicios/ex005/style.css
@@ -1,13 +1,21 @@
 @charset "UTF-8";
 
 section.container {
-    width: 500px;
-    height: 200px;
+    position: relative;
+    width: 100%;
+    height: 99vh;
     background-color: yellow;
+    background-image: url(target001.png);
+    background-repeat: no-repeat;
+    background-size: 100% 100% ;
 }
 
 article.content {
+    position: absolute;
     width: 200px;
     height: 200px;
     background-color: black;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
