--- a/exercicios/ex005/style.css
+++ b/exercicios/ex005/style.css
@@ -1,21 +1,37 @@
 @charset "UTF-8";
 
-section.container {
+table {
     position: relative;
-    width: 100%;
-    height: 99vh;
-    background-color: yellow;
-    background-image: url(target001.png);
-    background-repeat: no-repeat;
-    background-size: 100% 100% ;
+    border-collapse: collapse;
+    font-family: Arial, Helvetica, sans-serif;
+    border: 1px solid black;
+    width: 800px;
+
+
 }
 
-article.content {
-    position: absolute;
-    width: 200px;
-    height: 200px;
-    background-color: black;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+
+td, th {
+    border: 1px solid rgba(0, 0, 0, 0.705);
+    padding: 5px;
+}
+
+th {
+    text-align: center;
+}
+
+thead {
+    color: white;
+    background-color: rgb(87, 87, 87);
+}
+
+tr.total
+{
+    color: white;
+    background-color: rgb(87, 87, 87);
+    font-weight: bold;
+}
+
+div#container {
+    overflow: auto;
 }
