--- a/exercicios/ex006/style.css
+++ b/exercicios/ex006/style.css
@@ -1,68 +1,102 @@
 @charset "UTF-8";
 
-*{
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+:root {
+    --font1: Verdana;
+    --font2: 'Passion One', cursive;
+    --font3: 'Sriracha';
+}
+
+* {
     margin: 0px;
     padding: 0px;
+}
+html, body {
+    min-height: 100vh;
+    font-family: var(--font3);
+
 }
 
 header {
     background-color: black;
     color: white;
     text-align: center;
-    
 }
 
 header > h1 {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     padding-top: 50px;
-    font-size: 7vw;
+    font-variant: small-caps;
+    font-family: var(--font2);
+    font-size: 10vw;
 }
+
 header > p {
     padding-bottom: 50px;
-    
+    font-size: 3vw;
+}
+
+a {
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+footer {
+    background-color: black;
+    color: white;
+    text-align: center;
+    padding: 15px;
 }
 
 section {
-    height:fit-content;
     padding-top: 10vh;
     padding-bottom: 10vh;
+    line-height: 2em;
     padding-left: 30px;
-    margin-bottom: 0px;
+    font-size: 2.5vw;
+}
+
+section > p {
+    padding-bottom: 58px;
 }
 
 section.normal {
     background-color: white;
+    color: black;
+
 }
 
-article {
-    width: 30vh;
-    font-family: cursive;
-    font-size: 3.5vw;
-    line-height: 2em;
-    font-weight: bold;
-    font-style: italic;
-    padding-bottom: 2vh;
-}
-
-section.image {
-    background-attachment: fixed;
-    box-shadow: inset 1px -1px 17px 0px;
-}
-
-section.image > article {
+section.imagem {
     color: white;
-    background-color: rgba(0, 0, 0, 0.39);
-    padding: 5px;
+    background-color: rgb(146, 92, 92);
+}
+
+section.imagem > p {
+    display: inline-block;
+    padding: 20px;
+    background-color: rgba(0, 0, 0, 0.253);
     border-radius: 2px;
-    text-shadow: -1px 1px 1px black;
 }
 
-section.image#img1 {
+section#img1 {
     background-image: url(imagens/background001.jpg);
-    background-position: right center;
+    background-size: cover;
+    background-position: center right;
+    background-attachment: fixed;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.452);
 }
 
-section.image#img2 {
+section#img2 {
     background-image: url(imagens/background002.jpg);
-    background-position: right center;
+    background-position: center right;
+    background-attachment: fixed;
+    background-size: cover;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.479);
 }
