--- a/exercicios/ex009/estilos/style.css
+++ b/exercicios/ex009/estilos/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    background-color: rgb(51, 27, 51);
+    background-color: rgb(36, 99, 93);
 }
 
 main {
@@ -22,8 +22,6 @@ section {
     height: 768px;
     border-radius: 20px;
     background-color: rgb(0, 0, 0);
-    border: 3px solid black;
-    box-shadow: 0px 1px 6px 0px black;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -46,13 +44,16 @@ div#container {
     position: absolute;
     background-color: white;
     width: 347px;
-    height: 450px;
+    height: 500px;
     padding: 10px;
     left: 50%;
-    top: 62%;
+    top: 66%;
     transform: translate(-50%, -50%);
     border-bottom-left-radius:5px;
     border-bottom-right-radius: 5px;
+    box-shadow: inset 0 1px 3px 0px black;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
 
 }
 
@@ -74,22 +75,22 @@ p#description {
 }
 
 input#iuser {
-    width: 280px;
+    width: 250px;
     position: relative;
     margin-left: 40px;
-    padding: 10px;
+    padding: 9px;
     border-radius: 13px;
-    border: 4px solid rgb(37, 3, 37);
+    border: 3px solid rgb(46, 143, 156);
     margin-bottom: 15px;
 }
 
 span#boneco {
     position: absolute;
-    top: 31.5%;
-    padding: 10px;
+    top: 28.5%;
+    padding: 8px;
     width: 50px;
     color: rgb(255, 255, 255);
-    background-color: rgb(37, 3, 37);
+    background-color: rgb(46, 143, 156);
     margin-left: 4px;
     border-radius: 14px;
     margin-bottom: 5px;
@@ -97,21 +98,21 @@ span#boneco {
 
 span#chave {
     position: absolute;
-    top: 44.7%;
-    padding: 10px;
+    top: 39.6%;
+    padding: 8px;
     width: 50px;
     color: rgb(255, 255, 255);
-    background-color: rgb(37, 3, 37);
+    background-color: rgb(46, 143, 156);
     margin-left: 4px;
     border-radius: 14px;
 }
 
 input#isenha {
-    width: 275px;
+    width: 250px;
     position: relative;
-    border: 4px solid rgb(37, 3, 37);
-    margin-left: 50px;
-    padding: 10px;
+    border: 3px solid rgb(46, 143, 156);
+    margin-left: 40px;
+    padding: 9px;
     border-radius: 13px;
     margin-bottom: 20px;
     margin-top: 3px;
@@ -140,4 +141,7 @@ input#forgot {
     color: rgb(54, 180, 153);
     border-radius: 15px;
     margin-bottom: 15px;
+}
+input#forgot:hover {
+    background-color:  rgb(172, 172, 172);
 }
