--- a/exercicios/ex009/estilos/mediaquery.css
+++ b/exercicios/ex009/estilos/mediaquery.css
@@ -1,7 +1,251 @@
 @charset "UTF-8";
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 992px) {
 
+    body {
+        background-image: linear-gradient(to bottom,rgb(36, 99, 93), rgb(88, 46, 122));
+    }
+
+    section {
+        width: 90vw;
+        height: 600px;
+    }
     
+    div#imagem {
+        display: inline-block;
+        width: 30vw;
+        height: 600px;
+        background-image: url(../imagens/pexels-ryutaro-tsukata-6249458.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: right top;
+    }
+
+    div#container {
+        float: right;
     
+
+        background-color: white;
+        width: 60vw;
+        height: 600px;
+        box-shadow: inset 0 1px 3px 0px black;
+
+    }
+
+    h1 {
+        font-weight: bolder;
+        text-align: justify;
+        padding: 15px;
+        margin-top: 25px;
+        margin-bottom: 15px;
+        font-size: 2em;
+        margin-left: 50px;
+    }
+    
+    p#description {
+        font-size: 1em;
+        text-indent: 15px;
+        padding: 5px 15px 25px 15px;
+        text-align: justify;
+        margin-right: 25px;
+        margin-bottom: 20px;
+        margin-left: 15px;
+    }
+
+    span#boneco {
+        position: absolute;
+        top: 32.8%;
+        padding: 8px;
+        width: 50px;
+        margin-left: 50px;
+        color: rgb(255, 255, 255);
+        background-color: rgb(46, 143, 156);
+        margin-left: 40px;
+        border-radius: 14px;
+        margin-bottom: 5px;
+    }
+    
+    span#chave {
+        position: absolute;
+        top: 42.4%;
+        padding: 8px;
+        width: 50px;
+        color: rgb(255, 255, 255);
+        background-color: rgb(46, 143, 156);
+        margin-left: 40px;
+        border-radius: 14px;
+    }
+
+    input#iuser {
+        width: 250px;
+        position: relative;
+        margin-left: 80px;
+        padding: 9px;
+        border-radius: 13px;
+        border: 3px solid rgb(46, 143, 156);
+        margin-bottom: 15px;
+    }
+
+    input#isenha {
+        width: 250px;
+        position: relative;
+        border: 3px solid rgb(46, 143, 156);
+        padding: 9px;
+        border-radius: 13px;
+        margin-bottom: 20px;
+        margin-top: 3px;
+        margin-left: 80px;
+    }
+
+    input#entrar {
+        width: 328px;
+        height: 40px;
+        background-color:  rgb(54, 180, 153);
+        color: white;
+        border: none;
+        border-radius: 25px;
+        margin-top: 15px;
+        margin-bottom: 25px;
+        margin-left: 50px;
+    }
+
+    input#forgot {
+        width: 328px;
+        height: 40px;
+        color: white;
+        border: 2px solid rgb(54, 180, 153);
+        background-color: white;
+        color: rgb(54, 180, 153);
+        border-radius: 15px;
+        margin-bottom: 15px;
+        margin-left: 50px;
+
+}
+
+}
+
+@media screen and (min-width: 992px) {
+
+    body {
+        background-image: linear-gradient(to bottom,rgb(36, 99, 93), rgb(88, 46, 122));
+    }
+
+    section {
+        width: 90vw;
+        height: 600px;
+    }
+    
+    div#imagem {
+        display: inline-block;
+        width: 40vw;
+        height: 600px;
+        background-image: url(../imagens/pexels-ryutaro-tsukata-6249458.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: right top;
+    }
+
+    div#container {
+        float: left;
+    
+
+        background-color: white;
+        width: 50vw;
+        height: 600px;
+        box-shadow: inset 0 1px 3px 0px black;
+
+    }
+
+    h1 {
+        font-weight: bolder;
+        text-align: justify;
+        padding: 15px;
+        margin-top: 25px;
+        margin-bottom: 15px;
+        font-size: 2em;
+        margin-left: 50px;
+    }
+    
+    p#description {
+        font-size: 1em;
+        text-indent: 15px;
+        padding: 5px 15px 25px 15px;
+        text-align: justify;
+        margin-right: 25px;
+        margin-bottom: 20px;
+        margin-left: 15px;
+        margin-right: 90px;
+    }
+
+    span#boneco {
+        position: absolute;
+        top: 38.9%;
+        padding: 8px;
+        width: 50px;
+        margin-left: 50px;
+        color: rgb(255, 255, 255);
+        background-color: rgb(46, 143, 156);
+        margin-left: 40px;
+        border-radius: 14px;
+        margin-bottom: 5px;
+    }
+    
+    span#chave {
+        position: absolute;
+        top: 51.5%;
+        padding: 8px;
+        width: 50px;
+        color: rgb(255, 255, 255);
+        background-color: rgb(46, 143, 156);
+        margin-left: 40px;
+        border-radius: 14px;
+    }
+
+    input#iuser {
+        width: 250px;
+        position: relative;
+        margin-left: 80px;
+        padding: 9px;
+        border-radius: 13px;
+        border: 3px solid rgb(46, 143, 156);
+        margin-bottom: 6%;
+        margin-top: 7%;
+    }
+
+    input#isenha {
+        width: 250px;
+        position: relative;
+        border: 3px solid rgb(46, 143, 156);
+        padding: 9px;
+        border-radius: 13px;
+        margin-bottom: 20px;
+        margin-top: 3px;
+        margin-left: 80px;
+    }
+
+    input#entrar {
+        width: 328px;
+        height: 40px;
+        background-color:  rgb(54, 180, 153);
+        color: white;
+        border: none;
+        border-radius: 25px;
+        margin-top: 25px;
+        margin-bottom: 25px;
+        margin-left: 70px;
+    }
+
+    input#forgot {
+        width: 328px;
+        height: 40px;
+        color: white;
+        border: 2px solid rgb(54, 180, 153);
+        background-color: white;
+        color: rgb(54, 180, 153);
+        border-radius: 15px;
+        margin-bottom: 15px;
+        margin-left: 70px;
+
+    }
+
 }
