--- a/exercicios/ex009/estilos/style.css
+++ b/exercicios/ex009/estilos/style.css
@@ -8,6 +8,7 @@
 
 body {
     background-color: rgb(36, 99, 93);
+    height: 100vh;
 }
 
 main {
@@ -25,36 +26,29 @@ section {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    overflow: hidden;
 
     
 }
 
 div#imagem {
+    display: block;
     width: 368px;
-    height: 768px;
+    height: 300px;
     background-image: url(../imagens/pexels-ryutaro-tsukata-6249458.jpg);
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: cover;
     background-position: right top;
-    border-radius: 20px;
     
 }
 
 div#container {
-    position: absolute;
+    display: block;
+    margin: ;
     background-color: white;
-    width: 347px;
-    height: 500px;
-    padding: 10px;
-    left: 50%;
-    top: 66%;
-    transform: translate(-50%, -50%);
-    border-bottom-left-radius:5px;
-    border-bottom-right-radius: 5px;
-    box-shadow: inset 0 1px 3px 0px black;
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
-
+    width: 368px;
+    height: 700px;
+    
 }
 
 
@@ -77,7 +71,7 @@ p#description {
 input#iuser {
     width: 250px;
     position: relative;
-    margin-left: 40px;
+    margin-left: 60px;
     padding: 9px;
     border-radius: 13px;
     border: 3px solid rgb(46, 143, 156);
@@ -86,7 +80,7 @@ input#iuser {
 
 span#boneco {
     position: absolute;
-    top: 28.5%;
+    top: 57.1%;
     padding: 8px;
     width: 50px;
     color: rgb(255, 255, 255);
@@ -94,38 +88,41 @@ span#boneco {
     margin-left: 4px;
     border-radius: 14px;
     margin-bottom: 5px;
+    margin-left: 20px;
 }
 
 span#chave {
     position: absolute;
-    top: 39.6%;
+    top: 64.7%;
     padding: 8px;
     width: 50px;
     color: rgb(255, 255, 255);
     background-color: rgb(46, 143, 156);
     margin-left: 4px;
     border-radius: 14px;
+    margin-left: 20px;
 }
 
 input#isenha {
     width: 250px;
     position: relative;
     border: 3px solid rgb(46, 143, 156);
-    margin-left: 40px;
     padding: 9px;
     border-radius: 13px;
     margin-bottom: 20px;
     margin-top: 3px;
+    margin-left: 60px;
 }
 
 input#entrar {
-    width: 348px;
+    width: 328px;
     height: 40px;
     background-color:  rgb(54, 180, 153);
     color: white;
     border: none;
     border-radius: 15px;
     margin-bottom: 15px;
+    margin-left: 17px;
 }
 
 input#entrar:hover {
@@ -133,7 +130,7 @@ input#entrar:hover {
 }
 
 input#forgot {
-    width: 348px;
+    width: 328px;
     height: 40px;
     color: white;
     border: 2px solid rgb(54, 180, 153);
@@ -141,6 +138,7 @@ input#forgot {
     color: rgb(54, 180, 153);
     border-radius: 15px;
     margin-bottom: 15px;
+    margin-left: 17px;
 }
 input#forgot:hover {
     background-color:  rgb(172, 172, 172);
